; ModuleID = '/home/carl/AnghaBench/vlc/modules/codec/avcodec/extr_va_surface.c_va_pool_Create.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/codec/avcodec/extr_va_surface.c_va_pool_Create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i64, %struct.va_pool_cfg }
%struct.va_pool_cfg = type { i64 (i32*)* }

@.str = private unnamed_addr constant [24 x i8] c"Failed to create device\00", align 1
@.str.1 = private unnamed_addr constant [21 x i8] c"CreateDevice succeed\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_4__* @va_pool_Create(i32* %0, %struct.va_pool_cfg* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.va_pool_cfg*, align 8
  %6 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.va_pool_cfg* %1, %struct.va_pool_cfg** %5, align 8
  %7 = call %struct.TYPE_4__* @malloc(i32 24)
  store %struct.TYPE_4__* %7, %struct.TYPE_4__** %6, align 8
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %9 = icmp eq %struct.TYPE_4__* %8, null
  %10 = zext i1 %9 to i32
  %11 = call i64 @unlikely(i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store %struct.TYPE_4__* null, %struct.TYPE_4__** %3, align 8
  br label %38

14:                                               ; preds = %2
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 2
  %17 = load %struct.va_pool_cfg*, %struct.va_pool_cfg** %5, align 8
  %18 = bitcast %struct.va_pool_cfg* %16 to i8*
  %19 = bitcast %struct.va_pool_cfg* %17 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %18, i8* align 8 %19, i64 8, i1 false)
  %20 = load %struct.va_pool_cfg*, %struct.va_pool_cfg** %5, align 8
  %21 = getelementptr inbounds %struct.va_pool_cfg, %struct.va_pool_cfg* %20, i32 0, i32 0
  %22 = load i64 (i32*)*, i64 (i32*)** %21, align 8
  %23 = load i32*, i32** %4, align 8
  %24 = call i64 %22(i32* %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %14
  %27 = load i32*, i32** %4, align 8
  %28 = call i32 @msg_Err(i32* %27, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  store %struct.TYPE_4__* null, %struct.TYPE_4__** %3, align 8
  br label %38

29:                                               ; preds = %14
  %30 = load i32*, i32** %4, align 8
  %31 = call i32 @msg_Dbg(i32* %30, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0))
  %32 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 1
  store i64 0, i64* %33, align 8
  %34 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 0
  %36 = call i32 @atomic_init(i32* %35, i32 1)
  %37 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  store %struct.TYPE_4__* %37, %struct.TYPE_4__** %3, align 8
  br label %38

38:                                               ; preds = %29, %26, %13
  %39 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  ret %struct.TYPE_4__* %39
}

declare dso_local %struct.TYPE_4__* @malloc(i32) #1

declare dso_local i64 @unlikely(i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @msg_Err(i32*, i8*) #1

declare dso_local i32 @msg_Dbg(i32*, i8*) #1

declare dso_local i32 @atomic_init(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
